# linux-email-client

./: CMakeLists.txt  DEMO.c  README.md  STRUCT_TEST.c  UI2.c  UI2.h  define.c  define.h  main.c  style.css
cs-interface/: CMakeLists.txt  DEMO.c  FETCH_MAIL.c  FETCH_MAIL.h  PRE_CONDITIONS.h  cJSON_PACKAGES.c  cJSON_PACKAGES.h  define.h  info-acc.c  info-acc.h  main  main.c
cs-interface/GTK --(DESKTOP_PAGE & Front)/: check.c  check.h  judge.c  judge.h  login.c  login.h  loginFunction.c  loginFunction.h  popup.c  popup.h  registermain.c  registermain.h  resetpassword.c  resetpassword.h  verification.c  verification.h
cs-interface/GetContact/: GetContact.c  GetContact.h
cs-interface/SaveDraft/: SaveDraft.c  SaveDraft.h
cs-interface/SetContact/: SetContact.c
cs-interface/delete/: delete.c
cs-interface/fetch_movements/fetch/: fetcher.c
cs-interface/getRecoverQuestion/: get_recover_question.c
cs-interface/login/: signin.c
cs-interface/recover/: recover.c
cs-interface/register/: register.c  register.h
cs-interface/send/: sender.c
funcs_ori/SaveDraft/: SaveDraft.c
funcs_ori/SetContact/: SetContact.c  SetContact.h
funcs_ori/fetch_movements/fetchdraft/: fetchdraft.c
funcs_ori/login/: signin.c
funcs_ori/send/: sender.c
main-window/: CMakeLists.txt  main.cpp
